--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "framer-motion": "^10.16.5",
     "next": "14.0.2",
     "react": "^18",
+    "react-animated-numbers": "^0.16.0",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
