--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
